# megaton

./: Cargo.toml  README.md  Taskfile.yml
megaton-hammer/: Cargo.toml
megaton-hammer/src/: check.rs  config.rs  error.rs  init.rs  lib.rs  main.rs  make.rs  print.rs  stdio.rs  template.json  toolchain.rs
megaton-hammer/src/system/: check.rs  error.rs  executer.rs  fs.rs  mod.rs  print.rs  process.rs
megaton-hammer/template/: Megaton.toml  main.npdm.json  verfile.after  verfile.before
runtime/: .clangd  .gitignore  Cargo.toml  Makefile  Taskfile.yml  configure.rs  link.ld  npdm-template.json
runtime/OLD/configure/: Cargo.toml
runtime/OLD/diag/: abort.cpp  abort.hpp  assert.hpp
runtime/OLD/program/: main.cpp
runtime/include/: megaton.hpp
runtime/include/megaton/: assert.hpp  types.h
runtime/macros/: Cargo.toml
runtime/macros/src/: bootstrap.rs  lib.rs
runtime/src/: lib.rs  main.cpp  main.s
runtime/src/cimpl/: abort.cpp  assert.cpp
runtime/src/exlaunch/: README.md
runtime/src/exlaunch/source/exl/: common.hpp  lib.hpp  module.cpp  types.h  usersetting.hpp
runtime/src/exlaunch/source/exl/lib/: armv8.hpp  libsetting.hpp  result.hpp
runtime/src/exlaunch/source/exl/lib/hook/: base.hpp  replace.hpp  trampoline.hpp
runtime/src/exlaunch/source/exl/lib/init/: init.cpp
runtime/src/exlaunch/source/exl/lib/nx/: smc.c  types.h
runtime/src/exlaunch/source/exl/lib/patch/: code_patcher.hpp  patcher_impl.hpp  random_access_patcher.hpp  stream_patcher.hpp
runtime/src/exlaunch/source/exl/lib/reloc/: elf.cpp  rtld.hpp
runtime/src/exlaunch/source/exl/lib/util/: func_ptrs.hpp  modules.hpp  ptr_path.hpp  random.cpp  random.hpp  typed_storage.hpp
rustc/: config.toml  (+1 more)
(+43 files in other folders)
