[package]
name = "megaton-hammer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
num_cpus = "1.16.0"
serde = { version = "1.0.193", features = ["derive"] }
termcolor = "1.4.0"
thiserror = "1.0.50"
toml = "0.8.8"
which = "5.0.0"


[[bin]]
name = "megaton"
path = "src/main.rs"

[lib]
name = "megatonhammer"
path = "src/lib.rs"
