[package]
name = "megaton-hammer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
dunce = "1.0.5"
filetime = "0.2.22"
fs4 = "0.9.1"
itertools = "0.13.0"
ninja-writer = "0.2.0"
num_cpus = "1.16.0"
pathdiff = "0.2.1"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
termcolor = "1.4.0"
thiserror = "1.0.50"
toml = "0.8.8"
walkdir = "2.5.0"
which = "5.0.0"


[[bin]]
name = "megaton"
path = "src/main.rs"

[lib]
name = "megaton_hammer"
path = "src/lib.rs"
